@@ -2,12 +2,12 @@
 #include <SFML/System/FileInputStream.hpp>
 
 std::expected<std::string, dgm::Error>
-dgm::Utility::loadFileAllText(const std::filesystem::path& path)
+dgm::Utility::loadAssetAllText(const std::filesystem::path& path)
 {
     try
     {
         sf::FileInputStream stream(path);
-        return dgm::Utility::loadFileAllText(stream);
+        return dgm::Utility::loadAssetAllText(stream);
     }
     catch (const std::exception& ex)
     {
@@ -18,23 +18,51 @@ dgm::Utility::loadFileAllText(const std::filesystem::path& path)
 }
 
 std::expected<std::string, dgm::Error>
-dgm::Utility::loadFileAllText(sf::InputStream& stream)
+dgm::Utility::loadAssetAllText(sf::InputStream& stream)
 {
     auto size = stream.getSize();
-    if (!size) throw dgm::Error("Cannot get stream size");
+    if (!size) return std::unexpected(dgm::Error("Cannot get stream size"));
 
     std::string buffer(*size, '\0');
     auto readBytes = stream.read(buffer.data(), *size);
 
     if (!readBytes)
     {
-        throw dgm::Error("Error while reading stream");
+        return std::unexpected(dgm::Error("Error while reading stream"));
     }
 
     if (*readBytes != *size)
     {
-        throw dgm::Error("Could not read requested amount of bytes");
+        return std::unexpected(
+            dgm::Error("Could not read requested amount of bytes"));
     }
 
     return buffer;
+}
+
+std::expected<std::string, dgm::Error>
+dgm::Utility::loadFileAllText(const std::filesystem::path& path)
+{
+    try
+    {
+        std::ifstream load(path);
+        return std::expected<std::string, dgm::Error>();
+    }
+    catch (const std::exception& e)
+    {
+        return std::unexpected(dgm::Error(e.what()));
+    }
+}
+
+std::expected<std::string, dgm::Error>
+dgm::Utility::loadFileAllText(std::ifstream& stream)
+{
+    stream.seekg(0, std::ios::end);
+    size_t len = stream.tellg();
+    stream.seekg(0, std::ios::beg);
+
+    auto&& result = std::string(len, '\0');
+    stream.read(result.data(), len);
+
+    return result;
 }
